--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
@@ -28,12 +28,12 @@
   },
   "dependencies": {
     "@ethersproject/transactions": "^5.7.0",
-    "@interchainjs/auth": "^1.17.4",
-    "@interchainjs/cosmos": "^1.17.4",
-    "@interchainjs/cosmos-types": "^1.17.4",
-    "@interchainjs/ethereum": "^1.17.4",
-    "@interchainjs/types": "^1.17.4",
-    "@interchainjs/utils": "^1.17.4",
+    "@interchainjs/auth": "^1.17.5",
+    "@interchainjs/cosmos": "^1.17.5",
+    "@interchainjs/cosmos-types": "^1.17.5",
+    "@interchainjs/ethereum": "^1.17.5",
+    "@interchainjs/types": "^1.17.5",
+    "@interchainjs/utils": "^1.17.5",
     "@xpla/xplajs": "^1.8.0",
     "@noble/hashes": "^1.3.1",
     "bech32": "^2.0.0",
@@ -42,7 +42,7 @@
     "decimal.js": "^10.4.3",
     "deepmerge": "4.2.2",
     "ethers": "^6.13.5",
-    "interchainjs": "^1.17.4"
+    "interchainjs": "^1.17.5"
   },
   "keywords": [
     "xpla"
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@interchainjs/encoding": "^1.13.5",
     "@types/jest": "^29.5.14",
-    "@xpla/evm": "^1.8.0-rc.0",
+    "@xpla/evm": "^1.8.0",
     "bech32": "^2.0.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.5",
