--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -15,6 +15,24 @@
     "access": "public",
     "directory": "dist"
   },
+  "exports": {
+    ".": {
+      "import": "./esm/index.js",
+      "require": "./index.js",
+      "types": "./index.d.ts"
+    },
+    "./*": {
+      "import": "./esm/*.js",
+      "require": "./*.js",
+      "types": "./*.d.ts"
+    },
+    "./*.js": {
+      "import": "./esm/*.js",
+      "require": "./*.js",
+      "types": "./*.d.ts"
+    },
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "copy": "copyfiles -f README.md package.json dist",
     "clean": "rimraf dist/**",
