--- a/libs/evm/package.json
+++ b/libs/evm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/evm",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "description": "TypeChain generated TypeScript interfaces for XPLA EVM smart contracts",
   "main": "index.js",
   "module": "esm/index.js",
@@ -24,8 +24,9 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "npm run clean && tsc && tsc -p tsconfig.esm.json",
+    "build": "npm run clean && tsc && tsc -p tsconfig.esm.json && npm run fix-esm",
     "clean": "rimraf dist",
+    "fix-esm": "tsc-esm-fix --target=dist/esm",
     "prepublishOnly": "npm run build",
     "typecheck": "tsc --noEmit"
   },
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@types/node": "^20.0.0",
     "rimraf": "^5.0.0",
+    "tsc-esm-fix": "^3.1.2",
     "typescript": "^5.0.0"
   },
   "publishConfig": {
