--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla-react",
-  "version": "1.8.1",
+  "version": "1.8.2",
   "description": "xpla-react is a JavaScript library providing react query hooks for interacting with xpla sdk.",
   "main": "index.js",
   "module": "esm/index.js",
@@ -37,8 +37,9 @@
   "scripts": {
     "copy": "copyfiles -f README.md package.json dist",
     "clean": "rimraf dist/**",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
-    "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
+    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run fix-esm; npm run copy",
+    "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json; npm run fix-esm",
+    "fix-esm": "tsc-esm-fix --target=dist/esm",
     "lint": "eslint . --fix"
   },
   "dependencies": {
@@ -52,7 +53,8 @@
     "decimal.js": "^10.4.3"
   },
   "devDependencies": {
-    "@tanstack/react-query": "4.29.1"
+    "@tanstack/react-query": "4.29.1",
+    "tsc-esm-fix": "^3.1.2"
   },
   "peerDependencies": {
     "@tanstack/react-query": "4.29.1"
