--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xplajs",
-  "version": "1.8.1",
+  "version": "1.8.2",
   "main": "index.js",
   "module": "esm/index.js",
   "author": "Joowon Yun <joowon@delightlabs.io>",
@@ -8,7 +8,8 @@
   "scripts": {
     "copy": "copyfiles -f README.md package.json dist",
     "clean": "rimraf dist/**",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy"
+    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run fix-esm; npm run copy",
+    "fix-esm": "tsc-esm-fix --target=dist/esm"
   },
   "publishConfig": {
     "access": "public",
@@ -43,6 +44,9 @@
     "@interchainjs/utils": "^1.19.1",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3"
+  },
+  "devDependencies": {
+    "tsc-esm-fix": "^3.1.2"
   },
   "license": "MIT",
   "description": ""
