--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla",
-  "version": "1.8.3",
+  "version": "1.8.4",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
@@ -36,8 +36,9 @@
   "scripts": {
     "copy": "copyfiles -f README.md package.json dist",
     "clean": "rimraf dist/**",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
-    "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
+    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run fix-esm; npm run copy",
+    "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json; npm run fix-esm",
+    "fix-esm": "tsc-esm-fix --target=dist/esm",
     "lint": "eslint . --fix",
     "starship:run": "sh ../../scripts/run-starship.sh",
     "starship:clean": "starship stop --config ./starship/configs/config.yaml",
@@ -74,6 +75,7 @@
     "ethers": "^6.13.5",
     "jest": "^29.5.0",
     "starshipjs": "^2.4.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "tsc-esm-fix": "^3.1.2"
   }
 }
