--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -41,8 +41,8 @@
     "lint": "eslint . --fix",
     "starship:run": "sh ../../scripts/run-starship.sh",
     "starship:clean": "starship stop --config ./starship/configs/config.yaml",
-    "starship:test": "jest --config ./jest.starship.config.js",
-    "starship:debug": "jest --config ./jest.starship.config.js --runInBand --verbose --bail"
+    "starship:test": "vitest",
+    "starship:debug": "vitest --bail"
   },
   "dependencies": {
     "@ethersproject/transactions": "^5.7.0",
@@ -54,8 +54,8 @@
     "@interchainjs/ethereum": "catalog:",
     "@interchainjs/types": "catalog:",
     "@interchainjs/utils": "catalog:",
-    "@xpla/evm": "workspace:",
-    "@xpla/xplajs": "workspace:",
+    "@xpla/evm": "workspace:*",
+    "@xpla/xplajs": "workspace:*",
     "@noble/hashes": "^1.3.1",
     "bech32": "^2.0.0",
     "bignumber.js": "^9.1.0",
@@ -71,13 +71,11 @@
   "devDependencies": {
     "@chain-registry/types": "catalog:",
     "@interchainjs/encoding": "catalog:",
-    "@types/jest": "^29.5.14",
     "@xpla/evm": "^1.8.0",
     "bech32": "^2.0.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.5",
-    "jest": "^29.5.0",
     "starshipjs": "^2.4.0",
-    "ts-jest": "^29.1.0"
+    "vitest": "^4.0.17"
   }
 }
