--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
     "typechain": "^8.3.2",
     "typescript": "catalog:"
   },
+  "pnpm": {
+    "overrides": {
+      "libsodium-wrappers-sumo": "0.8.0",
+      "libsodium-sumo": "0.8.0"
+    }
+  },
   "packageManager": "pnpm@10.27.0+sha512.72d699da16b1179c14ba9e64dc71c9a40988cbdc65c264cb0e489db7de917f20dcf4d64d8723625f2969ba52d4b7e2a1170682d9ac2a5dcaeaab732b7e16f04a"
 }
